Add Review Doc to Swagger. Fixed Review's POST failure
